2025-04-06T00:55:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14287423617 # 605
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-06
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 502 895 / 507 900
* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 508 901
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-22] / [2025-04-05]

2025-04-04T00:51:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14255665072 # 603
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-04
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 500 893 / 505 898
* notice: next accum: outdated-unq outdated-all / unq all: 502 895 / 507 900
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-03-20] / [2025-04-03]

2025-04-03T00:51:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14232539644 # 602
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-03
* notice: last 14d: unq all: 4 5
* notice: prev accum: outdated-unq outdated-all / unq all: 499 892 / 504 897
* notice: next accum: outdated-unq outdated-all / unq all: 500 893 / 505 898
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-03-19] / [2025-04-02]

2025-04-02T00:52:37Z: