@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-06T00:55:29Z",
+  "timestamp" : "2025-04-07T00:54:00Z",
   "count_outdated" : 896,
   "uniques_outdated" : 503,
-  "count" : 901,
-  "uniques" : 508,
+  "count" : 902,
+  "uniques" : 509,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -34,6 +34,15 @@
     },
     {
       "timestamp": "2025-04-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-04-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
