@@ -1,5 +1,5 @@
 {
-  "count": 5,
+  "count": 6,
   "uniques": 3,
   "clones": [
     {
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2025-04-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-04-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
