@@ -1,3 +1,12 @@
+2025-04-07T00:54:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14298472156 # 606
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-07
+* notice: last 14d: unq all: 3 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 503 896 / 508 901
+* notice: next accum: outdated-unq outdated-all / unq all: 503 896 / 509 902
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-04-06]
+
 2025-04-06T00:55:29Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/14287423617 # 605
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-04-06
